Correções Lucas, inicio VECM 2019E. Incl Fair.

--- a/Articles/VECM/Introduction.org
+++ b/Articles/VECM/Introduction.org
@@ -20,19 +20,20 @@ Despite the late interest in those expenditures cites:freitas_pattern_2013,girar
 
 * Introduction                                                       :ignore:
 
-Among aggregate demand expenditures, non-residential investment is one of the most examined between economists.
+The importance of non-residential investment for economic growth is a commonplace among heterodox economists.
 As a consequence, the relevance of others expenditures on macroeconomic dynamics has been underestimated cite:brochier_macroeconomics_2017.
-After the Great Recession this landscape has changed.
+After the subprime crisis (2008) and the Great Recession (2008-2009) this landscape has changed.
 More recently, other expenditures have been scrutinized under the demand-led growth agenda cites:freitas_pattern_2013,girardi_long-run_2016,girardi_autonomous_2018,braga_investment_2018.
 However, few studies focus on the role of residential investment in particular cite:petrini_2021_TD.
-We argue that the scarce attention that it receives is not compatible with its macroeconomic relevance.
 
-Besides the late interest in the macroeconomic consequences of residential investment to the business cycle and long-run economic growth cite:fiebiger_trend_2017,fiebiger_semi-autonomous_2018,perez_Montiel_2021, there are some controversial about its determinants.
-Our main objective is to present and evaluate a parsimonious way to describe residential investment rate of growth.
+We argue that the scarce attention that residential investment receives is not compatible with its macroeconomic relevance.
+Besides the recent interest in the macroeconomic consequences of residential investment to the business cycle and long-run economic growth cite:fiebiger_trend_2017,fiebiger_semi-autonomous_2018,perez_Montiel_2021, there are some controversies about its determinants.
+
+Our main objective is to present and evaluate a parsimonious way of explaining the behavior of the rate of growth of residential investment, focusing on the US case.
+We will base this explanation on a single index that combines two relevant variables of the housing market: mortgages rate of interest and house price inflation.
 In Section ref:sec:Stylized_Facts, we discuss the macroeconomic relevance of residential investment regarding the US case.
-Next, in Section ref:sec:empirical_review, we review different macroeconometric models that estimate residential investment determinants.
+Next, in Section ref:sec:empirical_review, we review works that estimates the determinants of residential investment determinants.
 In Section ref:sec:VECM, we estimate a bi-variate vector error-correction model (VECM) using time-series data for the US economy from 1992 to 2019.
-Section ref:sec:Conclusion closes the paper.
-We conclude that the proposed index describes residential investment growth rate while the opposite direction does not occur.
-The results for all statistical tests and robustness check are provided in Appendix ref:appen:A.
-
+Section ref:sec:Conclusion concludes the paper.
+The results of our investigation indicate the relevance of the proposed index in explaining the dynamics of the growth of rate of residential investment.
+Appendix ref:appen:A provides results for all statistical tests and for the robustness check.
