--- a/Articles/VECM/tabs/VECM_lag_order.tex
+++ b/Articles/VECM/tabs/VECM_lag_order.tex
@@ -1,3 +1,6 @@
+\begin{table}
+\caption{Selection model order (* indicates the minimum)}
+\label{criterios}
 \begin{center}
 \begin{tabular}{lcccc}
 \toprule
@@ -23,3 +26,4 @@
 \end{tabular}
 %\caption{VECM Order Selection (* highlights the minimums)}
 \end{center}
+\end{table}
