--- a/Articles/VECM/tabs/hypothesis.tex
+++ b/Articles/VECM/tabs/hypothesis.tex
@@ -18,12 +18,12 @@
 				$own$ dynamics is not affected\\by previous equilibrium deviation\end{tabular}
 			\\ \hline
 			\textbf{3. $\alpha_2 < 0$} &
-			\begin{tabular}[c]{@{}l@{}}Own interest rate Granger-causes\\
+			\begin{tabular}[c]{@{}l@{}}houses own-rate of interest Granger-causes\\
 				residential investment growth rate\end{tabular} & \begin{tabular}[c]{@{}l@{}} $g_{I_h}$ dynamics is affected\\ by previous equilibrium deviation\end{tabular}
 			\\ \hline
 			\textbf{4. $\phi_1 > 0$} &
 			\begin{tabular}[c]{@{}l@{}}Series share a common\\negative long-run relationship\end{tabular} &
-			\begin{tabular}[c]{@{}l@{}}Own interest rate affects\\residential investment growth rate negatively\end{tabular} \\ \hline
+			\begin{tabular}[c]{@{}l@{}}houses own-rate of interest affects\\residential investment growth rate negatively\end{tabular} \\ \hline
 			\textbf{5. $\phi_0 < 0$} &
 			\begin{tabular}[c]{@{}l@{}}
 			Real estate demand for non-speculation\\reasons is statistically significant
@@ -32,12 +32,12 @@
 				Real estate demand associated with\\institutional particularities and demographic\\ changes affects residential investment\\growth rate positively\end{tabular} \\ \hline
 			\textbf{6. $\gamma_{2,is} < 0$} &
 			\begin{tabular}[c]{@{}l@{}}Residential investment growth rate\\coefficient is statistically significant\end{tabular} &
-			\begin{tabular}[c]{@{}l@{}}Own interest rate affects\\$g_{I_h}$ in the short-run\end{tabular} \\ \hline
+			\begin{tabular}[c]{@{}l@{}}houses own-rate of interest affects\\$g_{I_h}$ in the short-run\end{tabular} \\ \hline
 			\textbf{7. $\beta_{1,is} = 0$} &
 			\begin{tabular}[c]{@{}l@{}}
-				$g_{I_h}$ effects over own interest\\ rate is not statistically significant\end{tabular} &
+				$g_{I_h}$ effects over houses own-rate of interest\\ is not statistically significant\end{tabular} &
 			\begin{tabular}[c]{@{}l@{}}
-				$g_{I_h}$ effects over own interest\\ rate is negligible since dwellings stock is much\\bigger than residential investment (flow)\end{tabular} \\ \hline\hline
+				$g_{I_h}$ effects over houses own-rate of\\interest are negligible\end{tabular} \\ \hline\hline
 		\end{tabular}%
 	}
 \caption*{\textbf{Source:} Authors' elaboration}
