--- a/Articles/VECM/Empirical_Review.org
+++ b/Articles/VECM/Empirical_Review.org
@@ -13,11 +13,11 @@ No entanto, a literatura macroeconômica sobre determinantes do investimento res
 
 of residential investment. It worth noting that this variable is much less studied than housing prices (Arestis
 econometric papers that includes residential investment has failed to treat it macroeconomically, restricting it to microeconomic and regional issues (arestis; karakitsos, 2008).
-Although the macroeconometric relevance of residential investment is not restricted to the US, most scholars have examined this specific case. In this context, we analyze the macroeconometric literature that explicitly includes housing to evaluate the determinants of its growth rate.
+Although the econometric relevance of residential investment is not restricted to the US, most scholars have examined this specific case. In this context, we analyze the econometric literature that explicitly includes housing to evaluate the determinants of its growth rate.
 
 After the US housing bubble burst, there have been a growing attention in the macroeconomic implications of residential investment.
 It worth noting that most econometric papers that includes residential investment has failed to treat it macroeconomically, restricting it to microeconomic and regional issues cite:arestis_u.s._2008.
-In this context, we analyze the macroeconometric literature that explicitly includes housing to evaluate the determinants of its growth rate.
+In this context, we analyze the econometric literature that explicitly includes housing to evaluate the determinants of its growth rate.
 
 Others scholars analyzed the investment (residential and non-residential) to depict the determinants of the business cycle.
 textcite:green_follow_1997, for example, estimates which investment Granger-causes GDP tests for the US from 1952 to 1992 and reports that residential investment leads --- more than firms' investment --- the business cycle.
@@ -58,6 +58,13 @@ According to textcite:arestis_u.s._2008, the US housing market in particular is 
 As a consequence, most econometric papers do not analyze residential investment in macroeconomic terms, restricting it to regional and metropolitan issues cite:arestis_u.s._2008.
 Additionally, if the housing macroeconomic literature is scarce, even fewer scholars examinate residential investment specifically.
 Most of them emphasize house prices consequences and not its volume implications cites:arestis_residential_2015,perez_Montiel_2021.
+
+
+
+textcite:barot_2002_House, for instance, investigate the differences and similarities for the Sweden and UK housing market based on a stock-flow framework from 1970 to 1998.
+Their residential investment functional form includes both Tobin's Q for residential investment and real interest rate.
+They report some opposite results regarding Granger causality tests for house prices, financial wealth, household debt and interest rate.
+The only result that is equally valid for both Sweden and UK is that Tobin's Q for residential investment  granger causes housing investment.
 
 *** Taxa própria
 
@@ -122,42 +129,48 @@ Thus, such a proposal is incompatible with modern macroeconomic theory in which 
 
 bibliography:ref.bib
 
-* Review of the Macroeconometric Literature                          :ignore:
+* Review of the Econometric Literature                          :ignore:
 
 
-
-As we have seen in the previous session, there has been a growing attention to the macroeconomic implications of residential investment. It is worth noting, there is a vast empirical literature on housing. However, this literature is mainly focused on urban and regional economics or microeconomic issues. As a consequence, few econometric papers analyze housing in macroeconomic terms. Additionally, if housing macroeconomic literature is scarce, even fewer scholars examine residential investment and its determinants specifically. In this section, we review papers that analyse the determinants of residential investment (or some proxy) focusing on the US case, as well on some panel analysis of multiple countries.
+In this section, we review papers that analyze the determinants of residential investment (or some proxy) focusing on the US case, as well on some panel analysis of multiple countries which includes the US.
+It is worth noting that empirical literature on housing is vast.
+However, it is mainly focused on urban and regional economics or microeconomic issues.
+As a consequence, few econometric papers analyze housing in macroeconomic terms.
+Additionally, if housing macroeconomic literature is scarce, even fewer scholars examine residential investment and its determinants specifically.
 
 In this sense, \citeauthor*{poterba_tax_1984}'s \citeyear{poterba_tax_1984} contribution stands out once it considers houses as an asset and not only as a durable consumption good.
-Based on asset-market model for the construction sector, he calibrates a model for the US from 1974 to 1982 to simulate the effect of inflation and tax policy on house markets.
+He calibrates an asset-market model for the construction sector for the US from 1974 to 1982 for the purpose of simulating the effect of inflation and tax policy on house markets.
 In order to specify a residential investment function, he includes real house prices, a non-residential constructor deflator index, wages of the housing sector and alternates between two measures  of  credit  rationing.
-The empirical estimations shows that residential investment is positively induced house prices.
+The empirical estimations shows that residential investment is positively related to house prices variation.
 
 textcite:topel_1988_Housing come to a similar conclusion to textcite:poterba_tax_1984.
-Based on instrumental variables, they estimate the determinants of housing starts (as a proxy for residential investment) for the US from 1963 to 183.
-Their functional form for residential investment includes hedonic prices and some cost shifters for the construction sector such as interest rate, expected inflation, wages and median market time since the construction begins.
+Based on instrumental variables, they estimate the determinants of housing starts (as a proxy for residential investment equation) for the US from 1963 to 1983.
+Their functional form for residential investment includes hedonic prices and some cost shifters for the construction sector such as interest rate, expected inflation, wages and median market time after the construction begins.
 In summary, they found that residential investment is highly sensible to house prices movements while interest rate is a relevant cost shifter.
 
 Recently,  textcite:arestis_residential_2015 update \citeauthor*{poterba_tax_1984}'s citeyear:poterba_tax_1984 framework by estimating an autoregressive distributed lag (ARDL) model for 17 OECD countries.
 In their model, they specify residential investment as a positive function of house prices, real disposable income and bank credit while mortgage interest and unemployment rate are expected to have negative effects.
-They report that disposable income is the major determinant of residential investment for most OECD countries while banking credit and house prices are more relevant for the US.
+They report that disposable income is the major determinant of residential investment for most OECD countries while banking credit and house prices are more relevant for the US case in particular.
 
-Some scholars estimated residential investment based on a Tobin's Q for residential investment[fn::This adapted Tobin's Q is defined as the ratio between the market price of new houses and construction cost to build a new one.].
-textcite:barot_2002_House, for instance, investigate the differences and similarities for the Sweden and UK housing market based on a stock-flow framework from 1970 to 1998.
-Their residential investment functional form includes both Tobin's Q for residential investment and real interest rate.
-They report some opposite results regarding Granger causality tests for house prices, financial wealth, household debt and interest rate.
-The only result that is equally valid for both Sweden and UK is that Tobin's Q for residential investment  granger causes housing investment.
-More recently, textcite:kohlscheen_2018_Residential, also estimate residential investment as a function of this particular Tobin's Q with an unbalanced panel data for 15 OECD countries from 1970 ownwards[fn::More precisely, textcite:kohlscheen_2018_Residential include Tobin's Q for residential investment numerator and denominator as separate variables.].
+Some scholars estimated residential investment determinants based on a Tobin's Q for residential investment[fn::This adapted Tobin's Q is defined as the ratio between the market price of new houses and construction cost to build a new one.].
+textcite:kohlscheen_2018_Residential, for instance, estimate residential investment as a function of this particular Tobin's Q with an unbalanced panel data for 15 OECD countries from 1970 ownwards[fn::More precisely, textcite:kohlscheen_2018_Residential include Tobin's Q for residential investment numerator and denominator as separate variables.].
 Beyond this adapted Tobin's Q they also include real house prices, GDP level, population density, net migration rates and house stock share on GDP.
 They conclude that real house prices growth, nominal interest rate, net migration rates and existing house stock are the main determinants of residential investment.
 
 Other common ground in the housing literature is the relevance of interest rate for residential investment.
-In a OLS model for 7 OECD countries, textcite:egebo_1990_MODEL concludes that real disposable income and interest rate deflated by consumer price index are relevant for explaining residential investment movements.
+The interest rate selection, however, varies.
+In a OLS model for 7 OECD countries, textcite:egebo_1990_MODEL conclude that real disposable income and long-term interest rate deflated by consumer price index are relevant for explaining residential investment.
 For the US in particular, they report that mortgage interest rate coefficients are robust.
-Some scholars have reported that the residential investment sensitivity to interest rate are still valid after institutional changes of mid-1980s[fn::The savings and loans crisis was followed by a set of institutional changes which affected the housing financial system. Just to name two of them: Depository Institutions Deregulation and Monetary Control Act (1980); Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA, 1989). For a detailed chronology, see  \textcite[Appendix B]{mccarthyMonetaryPolicyTransmission2002} and textcite:green_american_2005; for a discussion on the consequences for households access to consumption and mortgage credit see textcite:federal_deposit_insurance_corporation_savings_1997,wall_too_2010.].
+More recently, textcite:fair_macroeconometric_2018 estimates an residential investment function for the US for two subsamples (1954-2013 and 1954-2007) using a 2SOLS model.
+The residential investment equation has some demographic variables (percent of population with an specific age), depreciation rate of housing stock, real disposable income deflated by house market prices, real net housing wealth also deflated by house prices and alternates between real -- deflated by GDP deflator -- and nominal long-term after tax mortgage interest rate.
+It is worth noting that textcite:fair_macroeconometric_2018 discuss the statistical insignificance of real interest rates compared to nominal ones.
+As a consequence, he opts to use nominal mortgage rate instead.
+The model report jointly significant variables in which real after tax mortgage interest rate affects residential investment negatively.
+
+Others scholars have reported that the residential investment sensitivity to interest rate are still valid after institutional changes of mid-1980s[fn::The savings and loans crisis was followed by a set of institutional changes which affected the housing financial system. Just to name two of them: Depository Institutions Deregulation and Monetary Control Act (1980); Financial Institutions Reform, Recovery, and Enforcement Act (FIRREA, 1989). For a detailed chronology, see  \textcite[Appendix B]{mccarthyMonetaryPolicyTransmission2002} and textcite:green_american_2005; for a discussion on the consequences for households access to consumption and mortgage credit see textcite:federal_deposit_insurance_corporation_savings_1997,wall_too_2010.].
 textcite:mccarthyMonetaryPolicyTransmission2002, for instance, evaluate the responsiveness of residential investment to interest rates considering these changes in the housing financial system.
 In order to isolate these effects, they estimate  a GMM model for the US in two sub-samples (1975-1985 and 1986-2000).
-They conclude that the residential investment response magnitude to a monetary shock before and after these institutional breaks are similar.
+They conclude that the residential investment response magnitude to a monetary shock before and after these institutional changes are similar.
 textcite:gauger_residential_2003 also evaluate the consequences of deregulation of depository institutions throughout the 1980s.
 In order to do so, they estimate a VECM between a monetary aggregate (M2), GDP, residential investment and alternate between short-term government bonds and long-term mortgage interest rates.
 They report an increasing contribution of long-term mortgages interest rate in order to explain resident investment variance after those institutional changes mentioned above.
@@ -165,8 +178,7 @@ They report an increasing contribution of long-term mortgages interest rate in o
 
 Finally, Table ref:tab:summary_models shows an overview of the discussed papers.
 Each table entry contains the paper sample, estimation method and covariates.
-# In general, some authors deflate the rate of interest by the CPI, while others use nominal interest rate to capture the effect of monetary illusion.
-In the next section, we purpose and estimate an alternative for the residential investment in the US.
+In the next section, we propose and estimate an alternative explanation of the residential investment in the US.
 
 
 #+BEGIN_EXPORT latex
