--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -807,20 +807,22 @@ housing prices and finance, and residential investment.
 Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
 #+end_comment
 * Housing Dynamics and Business Cycle in the US Economy :ignore:
-Before the subprime crisis and the subsequent Great Recession (GR, 2008-9), economists usually did not pay due attention to the role of residential investment to macroeconomic dynamics.
-Perhaps, this lack of attention can be explained by the small share of residential investment on aggregate demand (see figure ref:fig:share).
-Since the Global Financial Crisis, this landscape has changed, making clear the macroeconomic role of housing prices and finance, and residential investment.
-Specifically, we argue however small its share on GDP is, it does have a fundamental role in explaining business cycles and long-run growth.
 
-There are, nevertheless, two notable exceptions. In a letter to President Franklin D. Roosevelt, in the mid of the Great Depression, Keynes present the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
-The other exception is textcite:duesenberry_investment_1958 who presents a critique of ordinary theories of aggregate investment because they put together firms’ investment in capital and structures and investment in residential housing.
-In this sense, he builds a model dedicated for the latter type of investment, emphasizing the role of house prices.
+Usually, economists did not pay a systematic attention to the role of residential investment to macroeconomic dynamics.
+One possible explanation for this could be the small share of residential investment on aggregate demand (see Figure ref:fig:share).
+Recently, this lack of attention has been replaced by a clearer understanding of the macroeconomic relevance of residential investment.
+In this Section, we will present some stylized facts regarding the relevance of residential investment for the US economy.
+
+There are, nevertheless, two notable exceptions.
+In a letter to President Franklin D. Roosevelt, in the mid of the Great Depression, Keynes presented the case of housing as the best aid to fight the crisis and to foster economic recovery \cite[p.~436]{keynes_collected_1978}.
+The other exception is textcite:duesenberry_investment_1958 who critics ordinary theories of aggregate investment because they put together firms’ investment in capital and structures and residential investment.
+In this sense, he proposes a model dedicated for the latter type of investment, emphasizing the role of house prices.
 
 
 #+begin_export latex
 \begin{figure}[H]
     \centering
-	\caption{Expenditures share on GDP}
+	\caption{Expenditures share on aggregate demand}
 	\label{fig:share}
 \begin{figure}[htb]
     \includegraphics[width = \textwidth]{./figs/Share_AD_grey.png}
@@ -829,27 +831,27 @@ In this sense, he builds a model dedicated for the latter type of investment, em
 \end{figure}
 #+end_export
 
-Recently, more and more economists are paying attention to the relevance of residential investment for the business cycles.
-textcite:green_follow_1997 analyzed this connection even before the Great Recession.
-Based on Granger causality tests for the US from 1952 to 1992, he concludes that residential investment leads the cycle, while non-residential investment (i.e., firms business investment) lags the cycle.
+After a long time, the interest in residential investment had been restored in the econometric business cycles agenda.
+textcite:green_follow_1997 analyzes the connection between residential investment and business cycle even before the Great Recession.
+Based on Granger causality tests for the US from 1952 to 1992, he concludes that residential investment leads the business cycle, while non-residential investment lags it.
 textcite:green_follow_1997 relates this result to the forward-looking behavior of households.
 Thus, he restricts the relevance of residential investment as a temporal precedence indicator.
 
 textcite:leamer_housing_2007 is more incisive and states that housing is the business cycle.
 In analyzing the US economy for the post-war period, he concludes that residential investment is the best predictor of economic crises.
 The economic cycle of US economy would be a consumer cycle: "first homes, then cars, last business investment" \cite[p.~8]{leamer_housing_2007}.
-In a follow up work, the author declare that nine out of eleven US economic recessions were preceded by a severe downturn of residential investment, in the post-war period cite:leamer_housing_2015.
+In a follow up work, the author declare that nine out of eleven US post-war economic recessions were preceded by a severe downturn of residential investment cite:leamer_housing_2015.
 # Thus, according to textcite:leamer_housing_2007, residential investment anticipates and causes the business cycle[fn::However, textcite:leamer_housing_2007 him self did not evaluate this statements econometrically.].
-textcite:kydland_2016_housing extends \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} proposition to other countries to evaluate how unique the US case is.
-Similarly to textcite:green_follow_1997, they also conclude that residential investment leads the cycle -- while non-residential investment lags it -- for the US and Canada.
+textcite:kydland_2016_housing expand \citeauthor*{leamer_housing_2007}'s \citeyear{leamer_housing_2007} proposition to other countries to evaluate how unique the US case is.
+Similarly to textcite:green_follow_1997, they also conclude that residential investment leads the business cycle -- while non-residential investment lags it -- for the US and Canada.
 The results, however, are more robust when they include housing starts instead of residential investment.
 Briefly, they find that housing starts precedes GDP the shorter the time to build is[fn::For the other countries in the sample, textcite:kydland_2016_housing find that residential investment is coincident (and not lagging) with GDP. Additionally, they conclude that long-term nominal mortgage rate is a relevant transmission channel from interest rates to housing costs.].
-More recently, textcite:huang_is_2018 assess  prediction and causality relations proposed by textcite:leamer_housing_2007 for 17 OECD countries.
-For the US both statements are valid[fn::For the other countries, they found inconclusive results regarding fluctuations due to institutional heterogeneity. However, textcite:huang_is_2018 claim that for most G7 countries, residential investment at least amplify the business cycle.] and housing related variables (house prices, real mortgage rate --- deflated by a consumer price index --- and bank spread) lead the business cycle.
+Similarly, textcite:huang_is_2018 assess  prediction and causality relations proposed by textcite:leamer_housing_2007 for 17 OECD countries.
+For the US both statements are valid and housing related variables (house prices, real mortgage rate --- deflated by a consumer price index --- and bank spread) lead the business cycle[fn::For the other countries, they found inconclusive results regarding fluctuations due to institutional heterogeneity. However, textcite:huang_is_2018 claim that for most G7 countries, residential investment at least amplify the business cycle.].
 
 
 In order to depict the relation between residential investment and business cycle, we present Figure ref:fig:cycle.
-In each panel, we present the growth rate of selected expenditures two years before and after recession begin.
+In each panel, we present the growth rate of selected expenditures two years before and two years after recession starts.
 In most of them, residential investment growth rate is negative before the recession start.
 The Great Recession is a remarkable example of this pattern while dot-com crisis (2000-1) is an exception as already pointed out by textcite:leamer_housing_2007.
 
@@ -872,9 +874,9 @@ Talvez discutir preço aqui
 In a heterodox perspective, textcites:fiebiger_semi-autonomous_2018,fiebiger_trend_2017 present residential investment as a Luxemburg-type external market providing a source of autonomous demand to absorb economic surplus.
 Both works state its role (together with debt-financed consumption) in inducing non-residential investment and driving output growth, during the business cycle as well in the long-run.
 Figure ref:fig:trend presents the trend of GDP and residential investment growth rate by estimating a HP filter.
-Both series share a correlation relation in which residential investment growth rate is more volatile than GDP growth rate.
+Both series share a correlational relation in which residential investment growth rate is more volatile than GDP growth rate.
 Recently, textcite:perez_Montiel_2021 find that residential investment leads both the business cycles and the long-run economic growth for the US economy.
-Similar to textcite:girardi_long-run_2016, they do not report any relevant feedback from output to residential investment, configuring this expenditure as an autonomous one.
+Similar to textcite:girardi_long-run_2016, they do not report any relevant feedback from output to residential investment, categorizing this expenditure as an autonomous one.
 
 #+begin_export latex
 \begin{figure}[H]
@@ -889,9 +891,9 @@ Similar to textcite:girardi_long-run_2016, they do not report any relevant feedb
 
 Before we move forward, it is worth mentioning that the relevance of housing is not restricted to its implications to growth and business cycles.
 For example, textcite:jorda_great_2016 report that credit and financial sector growth has been led mainly by mortgages. 
-As a consequence, banking activities were redirected towards granting credit majorly to households and not towards productive investment cites:erturk_banks_2007,kohl_more_2018.
-Other studies have shown that real estate inflation is the main determinant of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability cites:ryoo_household_2015,stockhammer_debt-driven_2016,barnes_private_2016,johnston_global_2017,mian_household_2017,anderson_politics_2020,fuller_housing_2020. 
+As a consequence, banking activities were redirected towards granting credit majorly to households and not towards non-residential investment cites:erturk_banks_2007,kohl_more_2018.
+Other studies have shown that house price inflation is the main determinant of household indebtedness, distribution of wealth and that it has implications for macroeconomic stability cites:ryoo_household_2015,stockhammer_debt-driven_2016,barnes_private_2016,johnston_global_2017,mian_household_2017,anderson_politics_2020,fuller_housing_2020.
 In summary, what we intended to show was the macroeconomic relevance of residential investment.
-On the following section, we analyze how econometric literature has dealt with determinants of the latter.
+On the following section, we analyze how econometric literature has dealt with its determinants.
 
 *** TODO Falar sobre bolha no parágrafo anterior? :noexport:
