--- a/Articles/VECM/tabs/Johansen.tex
+++ b/Articles/VECM/tabs/Johansen.tex
@@ -14,11 +14,11 @@
  &  & \multicolumn{1}{c|}{Statistic} & critical value (5\%) \\ \hline
 \multirow{3}{*}{\textbf{$g_{I_h}$, Own interest rate}} & $r = 0$ &22.51&19.96\\
  & $r = 1^*$ &2.91&9.24\\\hline	
-\multirow{4}{*}{\textbf{$g_{I_h}$, Inflation and Mortgage interest rate}} & $r = 0$ &46.05&34.91\\
- & $r = 1^*$ &15.08&19.96\\
- & $r = 2$ &6.44&9.24\\\hline
-\multirow{3}{*}{\textbf{$g_{I_h}$, Inflation and exogenous  mortgages interest rate}} & $r = 0$ &36.88& 19.96\\ 
- & $r = 1^*$ &7.87&9.24\\ 
+% \multirow{4}{*}{\textbf{$g_{I_h}$, Inflation and Mortgage interest rate}} & $r = 0$ &46.05&34.91\\
+%  & $r = 1^*$ &15.08&19.96\\
+%  & $r = 2$ &6.44&9.24\\\hline
+% \multirow{3}{*}{\textbf{$g_{I_h}$, Inflation and exogenous  mortgages interest rate}} & $r = 0$ &36.88& 19.96\\
+%  & $r = 1^*$ &7.87&9.24\\
   \hline
 \end{tabular}%
 }
