--- a/Articles/VECM/tabs/StructBreak.tex
+++ b/Articles/VECM/tabs/StructBreak.tex
@@ -14,18 +14,18 @@
 			\multirow{3}{*}{\textbf{Residential investment ($g_{I_h}$)}} & 1991/Q3 & 5.1147 & 0.0254 \\
 			& 2005/Q4 & 7.286 & 0.007881 \\
 			& 2010/Q3 & 6.1013 & 0.01481 \\ \hline
-			\multirow{5}{*}{\textbf{Own interest rate}} & 1991/Q3 & 63.453 & 7.487e-13 \\
+			\multirow{5}{*}{\textbf{Houses own-rate of interest}} & 1991/Q3 & 63.453 & 7.487e-13 \\
 			& 1996/Q3 & 107.47 & \textless 2.2e-16 \\
 			& 2001/Q2 & 78.378 & 5.662e-15 \\
 			& 2006/Q1 & 20.68 & 1.236e-05 \\
 			& 2011/Q1 & 78.969 & 4.663e-15 \\ \hline
-			\multirow{4}{*}{\textbf{Mortgage interest rate}} & 1991/Q3 & 124.35 & \textless 2.2e-16 \\
-			& 1997/Q1 & 199.25 & \textless 2.2e-16 \\
-			& 2002/Q1 & 301.18 & \textless 2.2e-16 \\
-			& 2009/Q4 & 172.97 & \textless 2.2e-16 \\ \hline
-			\multirow{3}{*}{\textbf{Real estate inflation}} & 1997/Q3 & 1.5508 & 0.2153 \\
-			& 2005/Q4 & 23.49 & 3.569e-06 \\
-			& 2011/Q3 & 4.4981 & 0.03586 \\ 
+			% \multirow{4}{*}{\textbf{Mortgage interest rate}} & 1991/Q3 & 124.35 & \textless 2.2e-16 \\
+			% & 1997/Q1 & 199.25 & \textless 2.2e-16 \\
+			% & 2002/Q1 & 301.18 & \textless 2.2e-16 \\
+			% & 2009/Q4 & 172.97 & \textless 2.2e-16 \\ \hline
+			% \multirow{3}{*}{\textbf{Real estate inflation}} & 1997/Q3 & 1.5508 & 0.2153 \\
+			% & 2005/Q4 & 23.49 & 3.569e-06 \\
+			% & 2011/Q3 & 4.4981 & 0.03586 \\
 			\hline \hline
 		\end{tabular}%
 	%}
